# lisp2

./: .gitignore  CHANGELOG.md  Makefile  lisp.cabal
.github/workflows/: haskell.yml
app/: Main.hs  Parser.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Cps.hs  Eval.hs  EvalDebug.hs  Gensym.hs  Opt.hs  Parser.hs  Types.hs
test/: CpsSpec.hs  EvalSpec.hs  ParserSpec.hs
