cabal-version:      2.4
name:               lisp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Shojin Masuda
maintainer:         shomasd@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lisp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Parser, Types

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                      , PatternSynonyms
                      , Strict
    build-depends:    base ^>=4.14.1.0
                    , text 
                    , containers
                    , parsec
                    , record-hasfield

    hs-source-dirs:   app
    default-language: Haskell2010
