cabal-version:      2.4
name:               lisp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Shojin Masuda
maintainer:         shomasd@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


library 
  exposed-modules: Eval, Parser, Types
  hs-source-dirs:   src
  build-depends:    base ^>=4.14.1.0
                    , text 
                    , containers
                    , parsec
                    , record-hasfield
                    , mtl
  -- LANGUAGE extensions used by modules in this package.
  default-extensions: OverloadedStrings
                    , PatternSynonyms
                    , Strict
                    , BlockArguments
  default-language: Haskell2010



test-suite example-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    EvalSpec

  -- LANGUAGE extensions used by modules in this package.
  default-extensions: OverloadedStrings
                    , PatternSynonyms
                    , Strict
                    , BlockArguments
  build-depends:
    , base     >=4.7 && <5
    , lisp

  default-language: Haskell2010


executable lisp
    main-is:          Main.hs


    -- LANGUAGE extensions used by modules in this package.
    default-extensions: OverloadedStrings
                      , PatternSynonyms
                      , Strict
                      , BlockArguments
    build-depends:    base ^>=4.14.1.0
                    , text 
                    , containers
                    , parsec
                    , record-hasfield
                    , lisp

    hs-source-dirs:   app
    default-language: Haskell2010


